<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/signInButton"
        android:layout_width="211dp"
        android:layout_height="86dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="228dp"
        android:text="@string/sign_in_button_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextField" />

    <EditText
        android:id="@+id/usernameTextField"
        android:layout_width="217dp"
        android:layout_height="52dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="90dp"
        android:hint="@string/username_edittext_text"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/passwordTextField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordTextField"
        android:layout_width="217dp"
        android:layout_height="52dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:inputType="textPassword"
        android:hint="@string/password_edittext_text"
        app:layout_constraintBottom_toTopOf="@+id/signInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextField" />

    <TextView
        android:id="@+id/registerTextButton"
        android:layout_width="217dp"
        android:layout_height="52dp"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginBottom="169dp"
        android:gravity="center"
        android:text="@string/register_textview_text"
        android:textColor="#145C95"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButton" />

</androidx.constraintlayout.widget.ConstraintLayout>